--- a/style.css
+++ b/style.css
@@ -8,14 +8,15 @@ vertical-align:baseline;
 }
 
 li {
-	margin-bottom: 15px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 display:block;
 }
 
-html, body {background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}
+html, body {background: #181818; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 14px; color: #222;}
 
 .clear {clear: both;}
 
@@ -28,9 +29,9 @@ p {
 
 #cv {
 	width: 90%;
-	max-width: 800px;
+	max-width: 900px;
 	background: #f3f3f3;
-	margin: 30px auto;
+	margin: 24px auto;
 }
 
 .mainDetails {
@@ -57,7 +58,7 @@ p {
 }
 
 #headshot {
-	width: 12.5%;
+	width: 7.5%;
 	float: left;
 	margin-right: 30px;
 }
@@ -118,12 +119,12 @@ section:last-child {
 
 .sectionTitle {
 	float: left;
-	width: 20%;
+	width: 10%;
 }
 
 .sectionContent {
 	float: right;
-	width: 72.5%;
+	width: 85%;
 }
 
 .sectionTitle h1 {
